// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Block adds sidebar modifier 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fafafa;
  height: 100%;
  overflow: hidden;
  -webkit-transition: -webkit-transform 0.35s ease-in-out;
  -webkit-transition: transform 0.35s ease-in-out;
  transition: transform 0.35s ease-in-out;
  z-index: 1;
  -webkit-transform: translateX(300px);
  -ms-transform: translateX(300px);
  transform: translateX(300px);
}

<div
  className="c0"
/>
`;

exports[`Page Block renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #fafafa;
  height: 100%;
  overflow: hidden;
  -webkit-transition: -webkit-transform 0.35s ease-in-out;
  -webkit-transition: transform 0.35s ease-in-out;
  transition: transform 0.35s ease-in-out;
  z-index: 1;
}

<div
  className="c0"
/>
`;
